objects/Validation_Test__c.object
<CustomObject>
    <description>This object is used to track Validation Test records that outline specific prerequisites for certain scenarios and their expected results.</description>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Validation Test must be assigned to an Active User</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Validation_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chrome</fullName>
                </value>
                <value>
                    <fullName>Firefox</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 8</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 9</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 10</fullName>
                </value>
                <value>
                    <fullName>Internet Explorer 11</fullName>
                </value>
                <value>
                    <fullName>Safari</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Action__c</fullName>
        <label>Business Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete_By_Date__c</fullName>
        <description>This validation test should be completed by the date listed</description>
        <inlineHelpText>This validation test should be completed by the date listed</inlineHelpText>
        <label>Complete By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <label>Hours to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <label>Percent Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10 %</fullName>
                </value>
                <value>
                    <fullName>20 %</fullName>
                </value>
                <value>
                    <fullName>30 %</fullName>
                </value>
                <value>
                    <fullName>40 %</fullName>
                </value>
                <value>
                    <fullName>50 %</fullName>
                </value>
                <value>
                    <fullName>60 %</fullName>
                </value>
                <value>
                    <fullName>70 %</fullName>
                </value>
                <value>
                    <fullName>80 %</fullName>
                </value>
                <value>
                    <fullName>90 %</fullName>
                </value>
                <value>
                    <fullName>100 %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Validation Tests</relationshipLabel>
        <relationshipName>Validation_Tests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Validation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be checked when the Validation Test has been completely satisfied</description>
        <inlineHelpText>This field should be checked when the Validation Test has been completely satisfied</inlineHelpText>
        <label>Validation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Pending Client Action</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Test__c</fullName>
        <label>Validation Test Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>lookupKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Validation Test</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>VTest-</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Hours_to_Complete_Required</fullName>
        <active>true</active>
        <description>You must enter the approximate amount of time it took to complete this test before saving the record as complete</description>
        <errorConditionFormula>AND( 
ISBLANK(Hours_to_Complete__c), 
Validation_Complete__c = True)</errorConditionFormula>
        <errorDisplayField>Hours_to_Complete__c</errorDisplayField>
        <errorMessage>You must enter the approximate amount of time it took to complete this test before saving the record as complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Working_Requires_Percent_Complete</fullName>
        <active>true</active>
        <description>If a Validation Test is in the &apos;Working&apos; Status, please assign a completion percentage</description>
        <errorConditionFormula>AND(
ISPICKVAL(Validation_Status__c , &apos;Working&apos;),
ISPICKVAL(Percent_Complete__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Percent_Complete__c</errorDisplayField>
        <errorMessage>If a Validation Test is in the &apos;Working&apos; Status, please assign a completion percentage</errorMessage>
    </validationRules>
</CustomObject>